2003-04-22  Andrew Bennetts  <spiv@twistedmatrix.com>

	* twisted/lore/latex.py: Handle cross-references and labels slightly
	better, so that e.g. man/lore.html and howto/lore.html don't generate
	conflicting labels.  Also, emit \loreref{...} instead of \pageref{...}
	-- this isn't a standard LaTeX command, see admin/book.tex for an
	example definition.  In HTML generation, all relative hrefs in <a>
	tags are now munged from .html to .xhtml, unless class="absolute".

2003-04-21  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/interfaces.py: Added getServiceNamed, addService,
	and removeService to IServiceCollection.

2003-04-21  Brian Warner  <warner@lothar.com>

	* twisted/web/woven/*.py: add test-case-name tags

2003-04-21  Bob Ippolito <bob@redivi.com>

	* twisted/web/static.py (File, DirectoryListing): DirectoryListing
	now gets the directory listing from File.listNames, and no longer
	calls os.listdir directly (unless a directory listing is not
	specified in the DirectoryListing constructor).

2003-04-19  Brian Warner  <warner@lothar.com>

	* twisted/trial/remote.py (JellyReporter.cleanResults): handle
	strings as testClass/method to unbreak tests

	* twisted/trial/remote.py (JellyReporter.reportResults): send only
	name of testClass/method to remote reporter, not whole class and
	method. Also add .taster hook to DecodeReport to let users specify
	their own security options.

2003-04-17  Kevin Turner  <acapnotic@twistedmatrix.com>

	* .: Release 1.0.4 Final.

2003-04-16  Kevin Turner  <acapnotic@twistedmatrix.com>

	* .: Release 1.0.4rc1.

2003-04-15  Jp Calderone  <exarkun@twistedmatrix.com>

	* admin/accepttests, admin/accepttests.py: Acceptance tests
	turned into a Python module with no unguarded top-level code,
	to make running acceptance tests selectively possible.

2003-04-14  Brian Warner  <warner@lothar.com>

	* twisted/python/threadable.py (init):
	* twisted/spread/newjelly.py (SecurityOptions.allowBasicTypes):